[metadata]
name = terrarium
version = attr: terrarium.__version__
description = Package and ship relocatable Python virtual environments
long_description = file: README.rst
author = Kyle Gibson
author-email = kyle.gibson@frozenonline.com
url = https://terrarium.readthedocs.io/
project_urls =
  Source=https://github.com/PolicyStat/terrarium
  Tracker=https://github.com/PolicyStat/terrarium/issues
classifiers =
  Development Status :: 4  - Beta
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: BSD License
  Operating System :: POSIX
  Topic :: Software Development :: Testing
  Topic :: Software Development :: Libraries
  Topic :: Utilities
  Programming Language :: Python :: 2
  Programming Language :: Python :: 2.7
license = BSD 3-Clause
license_file = LICENSE.txt

[options]
packages = terrarium
zip_safe = True
python_requires = ~=2.7.0
install_requires = virtualenv

[options.entry_points]
console_scripts = terrarium = terrarium.terrarium:main
