[metadata]
name = terrarium
description = Package and ship relocatable Python virtual environments
long_description = file: README.rst
author = Kyle Gibson
author-email = kyle.gibson@frozenonline.com
url = https://terrarium.readthedocs.io/
project_urls =
  Source=https://github.com/PolicyStat/terrarium
  Tracker=https://github.com/PolicyStat/terrarium/issues
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: BSD License
  Operating System :: POSIX
  Topic :: Software Development :: Testing
  Topic :: Software Development :: Libraries
  Topic :: Utilities
  Programming Language :: Python :: 2
  Programming Language :: Python :: 2.7
license = BSD 3-Clause
license_file = LICENSE

[options]
py_modules = terrarium
setup_requires =
  setuptools>=30.3.0
  setuptools_scm
zip_safe = True
install_requires =
  virtualenv
  wheel

[options.entry_points]
console_scripts = terrarium = terrarium:main

[flake8]
max-line-length = 94
exclude = docs,build,dist,*.egg-info,.direnv,.tox,.eggs
select = E,W,F
